Prevent clipping focus outline in dialogs
REDMINE-19645

--- a/app/assets/stylesheets/pageflow/editor/dialogs.scss
+++ b/app/assets/stylesheets/pageflow/editor/dialogs.scss
@@ -44,7 +44,8 @@
   }
 
   .content {
-    padding: 0 space(2) 0 0;
+    padding: 0 space(2) 0 space(2);
+    margin-left: space(-2);
     overflow: auto;
   }
 
